ChangeLog
---------

$Id$

2010-12-15

* Support 'allowothercountry" for beyond the pledge resources. (Default False).

* Set the PANDA_URL_CONF and PANDA_URL environment variables to use the 
  panda server squid port (25085). Suppress this by setting the APF_NOSQUID
  environment variable.
  
* Download of queue data also now happens via the squid cache.

* Monitoring improvement to help scale better. Removal of monitoring cron jobs.

* This is the "Silent Running" release. Look after the plants, Dewey.
  http://en.wikipedia.org/wiki/Silent_Running

2010-11-22

* Changed default sleep time to 120s.

* N.B. Monitoring requires pycurl (install standard python-curl RPM).

2010-11-05

* Wrapper now supports environment variables starting with APF_FORCE_ 
  which set the environment variable with APF_FORCE_ stripped off.
  This is needed when setting the normal environment variable via
  condor-g fails because it gets overwritten by the site shell setup.

2010-09-15

* Removed deprecated code from runpilot3-wrapper.sh (uudecode and broken
  site hacks).

* This is the "Time Out of Joint" release. This pilot factory does not 
  exist. It is a small text file on your computer containing the words
  "Pilot Factory":
  http://en.wikipedia.org/wiki/Time_Out_of_Joint

2010-07-24

* Corrected bug where "site" parameter was used instead of "siteid" to get
  panda job states (broke ANALY sites for which these are different). 
  Reported by Xavi, diagnosed by Graeme, fixed by Peter.

* Reintroduced support for CREAM CEs - factory now detects CREAM CEs and
  provides the correct JDL to condor (recommended only for use with 
  condor >= 7.5.3). See configuration example for how to support this.
  
* Changed JDL for gt2 GRAM sumbission from anachronistic "universe = globus"
  to "universe = grid; grid_resource = gt2 GATEKEEPER_URL".

* Changed from 'jdl' field in schedconfig to 'queue', which is a better name 
  and has the correct value for condor sites ('jdl' supported but 