@@ -30,13 +30,19 @@ import os
 # Need to set PANDA_URL_MAP before the Client module is loaded (which happens
 # when the Factory module is loaded). Unfortunately this means that logging
 # is not yet available.
-if 'APF_NOSQUID' in os.environ:
-    # Use the panda server squid cache, unless APF_NOSQUID is set
-    print 'Found APF_NOSQUID set - will not set or change PANDA_URL_MAP, PANDA_URL'
+if not 'APF_NOSQUID' in os.environ:
+    if not 'PANDA_URL_MAP' in os.environ:
+        os.environ['PANDA_URL_MAP'] = 'CERN,http://pandaserver.cern.ch:25085/server/panda,https://pandaserver.cern.ch:25443/server/panda'
+        print >>sys.stderr, 'Set PANDA_URL_MAP to %s' % os.environ['PANDA_URL_MAP']
+    else:
+        print >>sys.stderr, 'Found PANDA_URL_MAP set to %s. Not changed.' % os.environ['PANDA_URL_MAP']
+    if not 'PANDA_URL' in os.environ:
+        os.environ['PANDA_URL'] = 'http://pandaserver.cern.ch:25085/server/panda'
+        print >>sys.stderr, 'Set PANDA_URL to %s' % os.environ['PANDA_URL']
+    else:
+        print >>sys.stderr, 'Found PANDA_URL set to %s. Not changed.' % os.environ['PANDA_URL']
 else:
-    os.environ['PANDA_URL_MAP'] = 'CERN,http://pandaserver.cern.ch:25085/server/panda,https://pandaserver.cern.ch:25443/server/panda'
-    os.environ['PANDA_URL'] = 'http://pandaserver.cern.ch:25085/server/panda'
-    print 'Set PANDA_URL_MAP, PANDA_URL to use squid cache: %s; %s' % (os.environ['PANDA_URL_MAP'], os.environ['PANDA_URL'])
+    print >>sys.stderr, 'Found APD_NOSQUID set. Not changing/setting panda client environment.'
 
 
 from autopyfactory.Factory import factory
